io-takamaka-examples/src/main/java/io/takamaka/tests/errors/inconsistentredpayable1/Sub.java
package io.takamaka.tests.errors.inconsistentredpayable1;

import io.takamaka.code.lang.Entry;

public class Sub extends Super {
	public @Entry void m() {}
}